# teamspeak-plugin-radiofx

./: .gitmodules  CMakeLists.txt
src/: mod_radio.cpp  mod_radio.h  plugin_qt.cpp  settings_radio.cpp
